--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="error"></div>
         </div>
           
-        <button type="submit" id="submit">Submit</button>
+        <input type="submit" value="submit" class="btn-submit" id="submit"/>
       </form>
     </div>
 
