--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="error"></div>
         </div>
           
-        <input type="submit" value="submit" class="btn-submit" id="submit"/>
+        <input type="submit" value="Login" class="btn-submit" id="submit"/>
       </form>
     </div>
 
