--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       </div>
       
-      <form id="form" method="post">
+      <form id="form" method="post" action="./logout.html">
         <div class="social">
           <div class="title">Get Started</div>
           <div class="question">
