--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       </div>
       
-      <form id="form" class="loginForm" action="./logout.html">
+      <form id="form" class="loginForm" action="/logout.html">
         <div class="social">
           <div class="title">Get Started</div>
           <div class="question">
@@ -63,7 +63,7 @@
           <div class="error-message"></div>
         </div>
           
-        <input type="submit" value="Login" class="btn-submit" id="submit"/>
+        <input type="submit" value="Login" class="btn-submit" id="submit" />
       </form>
     </div>
 
